--- a/WeChat/WeChat.Net.csproj
+++ b/WeChat/WeChat.Net.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{0512802D-CC4E-49A3-BDFB-97F109E2F66E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WeChat</RootNamespace>
-    <AssemblyName>WeChat</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>WeChat.Net</RootNamespace>
+    <AssemblyName>WeChat.Net</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
