--- a/WeChat/WeChat.Net.csproj
+++ b/WeChat/WeChat.Net.csproj
@@ -69,7 +69,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Wechat.nuspec" />
+    <None Include="WeChat.Net.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.png" />
